[gd_scene load_steps=10 format=3 uid="uid://d4c2h08mawyt1"]

[ext_resource type="Script" path="res://scripts/button.gd" id="1_vmrv7"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_axw2t"]
polygon = PackedVector2Array(-29, 0, 29, 0, 29, 7, -29, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8ms6"]
size = Vector2(36, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgvfk"]
size = Vector2(36, 7)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_y74jk"]
polygon = PackedVector2Array(-18, -3, 18, -3, 18, 4, -18, 4)

[sub_resource type="Animation" id="Animation_g41jp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}

[sub_resource type="Animation" id="Animation_m23vs"]
resource_name = "button_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, 3)]
}

[sub_resource type="Animation" id="Animation_irrp0"]
resource_name = "button_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 3), Vector2(0, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvreh"]
_data = {
"RESET": SubResource("Animation_g41jp"),
"button_down": SubResource("Animation_m23vs"),
"button_up": SubResource("Animation_irrp0")
}

[node name="Button" type="StaticBody2D"]
script = ExtResource("1_vmrv7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(29, 0, 29, 7, -29, 7, -29, 0)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_axw2t")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_d8ms6")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_mgvfk")

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatableBody2D"]
occluder = SubResource("OccluderPolygon2D_y74jk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lvreh")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
